--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,17 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation('com.sparkjava:spark-core:2.9.3')
+    implementation('com.sparkjava:spark-template-handlebars:2.7.1')
+    implementation('org.slf4j:slf4j-simple:1.7.36')
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    implementation('org.junit.jupiter:junit-jupiter-engine:5.8.2')
 }
 
-test {
-    useJUnitPlatform()
-}
+//test {
+//    useJUnitPlatform()
+//}
 //apply plugin: 'java'
 //
 //dependencies {
